--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,14 +1,18 @@
-{% load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href = "{% static "style.css"%}">
+        <link rel="stylesheet" href = "{% static 'style.css'%}">
         <title>Home</title>
     </head>
     <body>
-        <p>Lol</p>
+        <h1>Welcome to BCCAbook!</h1>
+        <form>
+        </form>
     </body>
-</html>
+
+
+</html
