--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,6 +12,9 @@
         <h1>Welcome to BCCAbook!</h1>
         <form>
         </form>
+        <main>
+        {% block content %}{% endblock content %}
+        </main>
     </body>
 
 
