--- a/app/templates/profiles.html
+++ b/app/templates/profiles.html
@@ -1,22 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'styles.css'%}">
   </head>
   <body>
-    <form action="{% url 'pf'%}" method="GET">
-      <p>BCCA PROFILE FINDER</p>
-
+    <nav>
+      <form action="{% url 'pf'%}" method="GET">
+      <h1 class="title">BCCA PROFILE FINDER</p>
+  
       <label>
         <p>Search Name:</p>
         <input type="text" name="name" />
       
 
-      <button>SEARCH</button>
-    </form>
-
+        <button>SEARCH</button>
+      </form>
+    </nav>
     {% if name == "Jacen Barefoot" %}
     <p> {{name}} </p>
     <p>Bio: I like to play Pokemon GO! Ayo</p>
@@ -24,64 +27,172 @@
     <p>Dream: TO win a shiny Pokemon</p>
     <p>Job: HomeTown Pizza<p>
 
-    {% elif name == "Ethan Ward"%}
+    {% elif name == "Ethan Ward" or name == "Ethan"%}
     <p> <p> {{name}} </p>
     <p>Bio: Taken</p>
     <p>Location: Bruce, MS</p>
     <p>Dream: To make it in the music industry</p>
     <p>Job: Dishwasher at Corner Store<p> </p>
+
+
     {% elif name == "Quinton Summerford"%}
      <p> {{name}} </p>
-    <p>Bio: I like pizza and long walks on the beach</p>
-    <p>Location: Lafette County</p>
-    <p>Dream: Marry Bill Gates</p>
-    <p>Job: None<p>
+     <p>Bio: Blue Pill or Red Pill?
+
+      Blue: Blueberry flavor
+      
+      Red: Infinite Money</p>
+     <p> Music Genre: Nightcore</p>
+     <p>Location: White Plains, NY</p>
+     <p>Dream:To defeat the sussy little dragon of Cthulhu </p>
+     <p>Job: Discord Admin<p>
+
+
     {% elif name == "Dylan Goad"%}
-    <p> </p>
-    {% elif name == "Dylan Shifton"%}
-    <p> </p>
+    <p> {{name}} </p>
+    <p>Bio: Nah</p>
+    <p> Music Genre: Minecraft Parodies</p>
+    <p>Location: Charleston, Mississippi</p>
+    <p>Dream: Work for NASA </p>
+    <p>Job: Unemployed<p>
+
+
+    {% elif name == "Dylan Shipton"% or name =="Asian Markiplier"}
+    <p>Bio: Am Wasian. Am Weeb. Am Saucy Housewife.</p>
+    <p>Dream: To become best Wasian.</p>
+    <p> Music: Everything except for rap.</p>
+    <p> Born Location: Hidden Leaf Village</p>
+    <p>Location: The Crib</p>
+    <p>Job: Pizza Boi <p>
+
+
     {% elif name == "Ariyana Neal"%}
     <p> </p>
-    {% elif name == "Mariann Mccord"%}
-    <p> </p>
+
+
+    {% elif name == "Mariann Mccord" or name == "Mariann"%}
+    <p>Bio: I am 18 years old and I enjoy listening to music in my free time along with reading, watching TV, and sleeping. </p>
+    <p>Dream: I hope to be a Software engineer with at least a Master's degree in the future and possibly try my in music production. I also want to travel the world in the meantime.</p>
+    <p> Music: R&B/ Lofi HipHop</p>
+    <p> Born: Charleston, Ms</p>
+    <p>Location: Oxford</p>
+    <p>Job: I currently work at the Newk's on University Ave in Oxford,MS. <p>
+
+
     {% elif name == "Will Collins"%}
      <p> {{name}} </p>
-    <p>Bio: </p>
+    <p>Bio: I eat chocolate</p>
     <p>Location: Bruce, MS</p>
     <p>Dream:10 kids</p>
     <p>Job: Dadd's money<p>
+
+
     {% elif name == "Logan Coley"%}
      <p> {{name}} </p>
-    <p>Bio: I like to play Pokemon GO! Ayo</p>
+    <p>Bio: I like to play Pokemon GO!</p>
     <p>Location: South Pontotoc</p>
     <p>Dream: To own a game development company</p>
     <p>Job: Mommy's store<p>
-    {% elif name == "Logan Wilkans"%}
-    <p> </p>
+    {% elif name == "Logan Wilkans" or name == "LOGAN T WILKANS"%}
+    <p> {{name}} </p>
+    <p>Bio: I love video games and play a large variety of them my favorites being soul calibur, halo, for honor, skyrim and fallout 4. I enjoy various forms of art as any for of expressing creativity brings me joy, I like to draw, create ships in space engineers, build models in blender, paint, write, make characters in video games, build maps in halo, etc. I also love to spar, as in sword fighting or other weapons fighting and i have practiced many martial arts to improve my sword fighting capability. Some of the martial arts i have studied involve </p>
+    <p>Dream: All my life i've wanted a role in creating video game, and it aligns with many of my favorite things to do, how ever I have to one day open a HEMA academy to teach sword play and martial arts</p>
+    <p> Favorite Music: Alternative rock is my top favorite, then there's instrumental, and dubstep... I also like christian rock</p>
+    <p>Location: Memphis</p>
+    <p>Job:  I currently work at Larsons Cashsaver Water Valley MS<p>
+
     {% elif name == "Gary Lane"%}
     <p> </p>
+
+
     {% elif name == "Isaac Jones"%}
-    <p> </p>
+     <p>Bio: I like to make things. I have a lot of creative hobbies. Drawing, Jewelry making, sewing, and playing instruments.</p>
+    <p>Dream: I want to be pursue a career in art</p>
+    <p>Music: Rock, Electronic</p>
+    <p>Born Location: Oxford </p>
+    <p>Location: Oxford </p>
+    <p>Job: Server at Newk's Eatery <p>
+
+
     {% elif name == "Ryan Bennett"%}
-    <p> </p>
+    <p> {{name}} </p>
+    <p>Bio: I'm a boring guy who plays video games.</p>
+    <p>Music: Classic Country</p>
+    <p>Dream: Become a video game developer</p>
+    <p>Born Saltillo, Mississippi</p>
+    <p>Location: Saltillo, Mississippi</p>
+    <p>Job: Server/Delivery Driver<p>
+
+
     {% elif name == "Richard Tutor"%}
-    <p> </p>
+     <p>Bio:</p>
+    <p>Dream: </p>
+    <p> Born Location:</p>
+    <p>Location: </p>
+    <p>Job:  <p>
+
+
     {% elif name == "Randy Trullet"%}
-    <p> </p>
+     <p>Bio: "Oh my days"
+      British Wannabe
+      Future Application Developer</p>
+      <p>Music: Melbourne Bounce and Folk</p>
+    <p>Dream: I want a house and a dog, that's about it. Also want a computer, that's a priority</p>
+    <p> Born Location: Corinth, MS</p>
+    <p>Location: Batesville</p>
+    <p>Job: Student <p>
+
+
     {% elif name == "Justin Ashmore"%}
-    <p> </p>
+    <p> {{name}} </p>
+    <p>Bio: I like to snack on chips, watch cop shows, and play video games</p>
+    <p>Dream: Have a big family and have good amount of money</p>
+    <p> Born Location: Florida</p>
+    <p>Location: Bruce, MS</p>
+    <p>Job:  Sosa Law Care<p>
     {% elif name == "Rjay Pickering"%}
-    <p> </p>
-    {% elif name == "Daelan Hollingsworth"%}
-    <p> </p>
+    <p>Bio: I like to play video games and fix broken vehicles.  i use to go to the gym alot and i love working around a farm</p>
+    <p> Music: heavy rock</p>
+    <p>Dream: videogame designer</p>
+    <p> Born Location: Idk</p>
+    <p>Location: Pontotoc</p>
+    <p>Job:  student/farmer<p>
+    {% elif name == "Daelan Hollingsworth" or name == "Daelan"%}
+     <p>Bio:I have always liked to play video games and I was in band.</p>
+    <p>Dream: </p>
+    <p> Music: heavy rock</p>
+    <p> Born Location: Place Unknown</p>
+    <p>Location: </p>
+    <p>Job:  <p>
     {% elif name == "Rylee Chisholm"%}
-    <p> </p>
+     <p>Bio: 5'5 and clingy, but thats okay.</p>
+     <p> Music: Pop and anything that sounds terrible.</p>
+    <p>Dream: To be 6ft tall.  I did dream once about this really weird fun house with a serial killer dressed as a neon pumpkin.</p>
+    <p> Born Location: Mom</p>
+    <p>Location: A diffent dimension</p>
+    <p>Job: Hometown Pizza delivery driver and cook<p>
      {% elif name == "My'Kyla Person"%}
-    <p> </p>
+     <p>Bio:</p>
+    <p>Dream: </p>
+    <p> Born Location:</p>
+    <p>Location: </p>
+    <p>Job:  <p>
      {% elif name == "Ben Crosby"%}
-    <p> </p>
+     <p>Bio:</p>
+    <p>Dream: </p>
+    <p> Born Location:</p>
+    <p>Location: </p>
+    <p>Job:  <p>
      {% elif name == "Michelle Rankin"%}
-    <p> </p>
+    <p>Bio: Lazy, Uncoordinated , Unprofessional, Hard Working </p>
+    <p>Dream: Make the Mula </p>
+    <p> Music: Post Hardcore</p>
+    <p> Born Location: Louisiana</p>
+    <p>Location: Oxford</p>
+    <p>Job: Server at HomeTown Pizza <p>
+
+    {% else %}
+    <p> Person does not attend BCCA </p>
 
     
     {% endif %}
