--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,17 +5,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href = "{% static 'style.css'%}">
+        <link rel="stylesheet" href = "{% static 'styles.css'%}">
         <title>Home</title>
     </head>
     <body>
         <h1>Welcome to BCCAbook!</h1>
-        <form>
-        </form>
-        <main>
-        {% block content %}{% endblock content %}
-        </main>
+        {% for name, info in students.items %}
+            <a href="{% url 'student' name %}"><h1>{{info.name}}</h1>
+            <h3>{{info.bio}}</h3>
+        {% endfor %}
     </body>
-
-
 </html
