--- a/app/templates/profiles.html
+++ b/app/templates/profiles.html
@@ -26,33 +26,53 @@
 
     {% elif name == "Ethan Ward" or name == "Ethan"%}
     <p> <p> {{name}} </p>
-    <p>Bio: Taken</p>
+    <p>Bio: I'm 18 years old. I'm Taken. Favorite Color is Purple</p>
+    <p> Music: Grunge</p>
     <p>Location: Bruce, MS</p>
-    <p>Dream: To make it in the music industry</p>
+    <p>Dream: To land a job in Cspire and grow my music</p>
     <p>Job: Dishwasher at Corner Store<p> </p>
     {% elif name == "Quinton Summerford"%}
      <p> {{name}} </p>
-    <p>Bio: I like pizza and long walks on the beach</p>
-    <p>Location: Lafette County</p>
-    <p>Dream: Marry Bill Gates</p>
-    <p>Job: None<p>
+    <p>Bio: Blue Pill or Red Pill?
+
+    Blue: Blueberry flavor
+
+    Red: Infinite Money</p>
+    <p>Location: White Plains, NY</p>
+    <p> Music: Nightcore</p>
+    <p>Dream: To defeat the sussy little dragon of Cthulhu</p>
+    <p>Job:Discord Admin</p>
     {% elif name == "Dylan Goad"%}
+    <p> {{name}} </p>
     <p>Bio: I liek turtles </p>
     <p> Music Genre: Minecraft Parodies</p>
     <p>Location: Charleston, Mississippi</p>
     <p>Dream: Work for NASA </p>
-    <p>Job: Memphis<p>
-    {% elif name == "Dylan Shifton"%}
-    <p>Bio:</p>
-    <p>Dream: </p>
-    <p> Music</p>
-    <p> Born Location:</p>
-    <p>Location: </p>
-    <p>Job:  <p>
-    {% elif name == "Ariyana Neal"%}
-    <p> </p>
-    {% elif name == "Mariann Mccord"%}
-    <p> </p>
+    <p>Job: Unemployed<p>
+
+
+    {% elif name == "Dylan Shifton" or name == "Asian Markiplier"%}
+    <p> {{name}} </p>
+    <p>Bio: Am Wasian. Am Weeb. Am Saucy Housewife.</p>
+    <p>Dream: To become best Wasian.</p>
+    <p> Music: Everything except for rap.</p>
+    <p> Born Location: Hidden Leaf Village</p>
+    <p>Location: The Crib</p>
+    <p>Job: Pizza Boi <p>
+
+
+    
+
+    {% elif name == "Mariann Mccord" or name == "Mariann"%}
+    <p>{{name}}</p>
+    <p>Bio: I am 18 years old and I enjoy listening to music in my free time along with reading, watching TV, and sleeping. </p>
+    <p>Dream: I hope to be a Software engineer with at least a Master's degree in the future and possibly try my in music production. I also want to travel the world in the meantime.</p>
+    <p> Music: R&B/ Lofi HipHop</p>
+    <p>Born Location: I am from the small town of Charleston, Mississippi.</p>
+    <p>Location: Oxford</p>
+    <p>Job: I currently work at the Newk's on University Ave in Oxford,MS. <p>
+
+
     {% elif name == "Will Collins"%}
      <p> {{name}} </p>
     <p>Bio: </p>
@@ -61,7 +81,7 @@
     <p>Job: Dadd's money<p>
     {% elif name == "Logan Coley"%}
      <p> {{name}} </p>
-    <p>Bio: I like to play Pokemon GO! Ayo</p>
+    <p>Bio: I like to play Pokemon GO!</p>
     <p>Location: South Pontotoc</p>
     <p>Dream: To own a game development company</p>
     <p>Job: Mommy's store<p>
@@ -69,12 +89,11 @@
     <p> {{name}} </p>
     <p>Bio: I love video games and play a large variety of them my favorites being soul calibur, halo, for honor, skyrim and fallout 4. I enjoy various forms of art as any for of expressing creativity brings me joy, I like to draw, create ships in space engineers, build models in blender, paint, write, make characters in video games, build maps in halo, etc. I also love to spar, as in sword fighting or other weapons fighting and i have practiced many martial arts to improve my sword fighting capability. Some of the martial arts i have studied involve </p>
     <p>Dream: All my life i've wanted a role in creating video game, and it aligns with many of my favorite things to do, how ever I have to one day open a HEMA academy to teach sword play and martial arts</p>
-    <p> Favorite Music:</p>
+    <p> Favorite Music:Alternative rock is my top favorite, then there's instrumental, and dubstep... I also like christian rock</p>
     <p>Location: Memphis</p>
     <p>Job:  I currently work at Larsons Cashsaver Water Valley MS<p>
 
-    {% elif name == "Gary Lane"%}
-    <p> </p>
+
     {% elif name == "Isaac Jones"%}
      <p>Bio: I like to make things. I have a lot of creative hobbies. Drawing, Jewelry making, sewing, and playing instruments.</p>
     <p>Dream: I want to be pursue a career in art</p>
@@ -90,18 +109,19 @@
     <p>Born Saltillo, Mississippi</p>
     <p>Location: Saltillo, Mississippi</p>
     <p>Job: Server/Delivery Driver<p>
-    {% elif name == "Richard Tutor"%}
-     <p>Bio:</p>
-    <p>Dream: </p>
-    <p> Born Location:</p>
-    <p>Location: </p>
-    <p>Job:  <p>
+    
     {% elif name == "Randy Trullet"%}
-     <p>Bio:</p>
-    <p>Dream: </p>
-    <p> Born Location:</p>
-    <p>Location: </p>
-    <p>Job:  <p>
+    <p> {{name}}</p>
+     <p>Bio:"Oh my days"
+        British Wannabe
+        Future Application Developer</p>
+    <p> Music: Melbourne Bounce and Folk</p>
+    <p>Dream: I want a house and a dog, that's about it. Also want a computer, that's a priority</p>
+    <p>Location: Corinth, MS</p>
+    
+    <p>Job: Student <p>
+
+
     {% elif name == "Justin Ashmore"%}
     <p> {{name}} </p>
     <p>Bio: I like to snack on chips, watch cop shows, and play video games</p>
@@ -109,36 +129,33 @@
     <p> Born Location: Florida</p>
     <p>Location: Bruce, MS</p>
     <p>Job:  Sosa Law Care<p>
-    {% elif name == "Rjay Pickering"%}
-    <p>Bio:</p>
-    <p>Dream: </p>
-    <p> Born Location:</p>
-    <p>Location: </p>
-    <p>Job:  <p>
-    {% elif name == "Daelan Hollingsworth"%}
-     <p>Bio:</p>
-    <p>Dream: </p>
-    <p> Born Location:</p>
-    <p>Location: </p>
-    <p>Job:  <p>
+
+
+    {% elif name == "RJay Pickering"%}
+    <p> {{name}}</p>
+    <p>Bio: I like to play video games and fix broken vehicles.  i use to go to the gym alot and i love working around a farm</p>
+    <p>Dream: videogame designer </p>
+    <p>Music: heavy rock</p>
+    
+    <p>Location: Pontotoc, MS</p>
+    <p>Job: student/farmer <p>
+    {% elif name == "Daelan Hollingsworth" or name == "Daelan"%}
+     <p>Bio: I have always liked to play video games and I was in band.</p>
+    <p>Dream: None</p>
+    <p> Music: Any music will do. </p>
+    <p>Location: Pontotoc, MS </p>
+    <p>Job: I deliver at Domino's. <p>
+
+
     {% elif name == "Rylee Chisholm"%}
-     <p>Bio:</p>
-    <p>Dream: </p>
-    <p> Born Location:</p>
-    <p>Location: </p>
-    <p>Job:  <p>
-     {% elif name == "My'Kyla Person"%}
-     <p>Bio:</p>
-    <p>Dream: </p>
-    <p> Born Location:</p>
-    <p>Location: </p>
-    <p>Job:  <p>
-     {% elif name == "Ben Crosby"%}
-     <p>Bio:</p>
-    <p>Dream: </p>
-    <p> Born Location:</p>
-    <p>Location: </p>
-    <p>Job:  <p>
+     <p>Bio:5'5 and clingy, but thats okay.</p>
+    <p>Dream: To be 6ft tall.  I did dream once about this really weird fun house with a serial killer dressed as a neon pumpkin. </p>
+    <p> Music: Pop and anything that sounds terrible.</p>
+    <p> Born Location: Mom</p>
+   
+    <p>Job:  Hometown Pizza delivery driver and cook<p>
+     
+     
      {% elif name == "Michelle Rankin"%}
     <p>Bio: Lazy, Uncoordinated , Unprofessional, Hard Working </p>
     <p>Dream: Make the Mula </p>
@@ -148,7 +165,7 @@
     <p>Job: Server at HomeTown Pizza <p>
 
     {% else %}
-    <p> Person does not attend BCCA </p>
+    <p> Person does not attend BCCA or Does not currently have a permit</p>
 
     
     {% endif %}
