--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,24 +1,28 @@
-.body {
-    background-image: linear-gradient(to right, rgb(127 211 238),  white);
-    
+body {
+  background-image: linear-gradient(to right, rgb(127 211 238), white);
 }
 
-
-
-.title{
-    padding: 2em;
-    margin-left: -2em;
-    margin-right: -2em;
-    margin-top: -1em;
-    border-bottom: solid black;
-    background: rgb(127 211 238);
-    color: white;
-    text-align: center;
+.title {
+  padding: 2em;
+  margin-left: -2em;
+  margin-right: -8px;
+  margin-top: -1em;
+  border-bottom: solid black;
+  background: rgb(127 211 238);
+  color: white;
+  text-align: center;
 }
 
-.p{
-    text-align: center;
+p {
+  text-align: center;
+  font-size: 20px;
+}
 
-
-
+div {
+  border: solid 5px white;
+  border-right: solid 10px rgb(127 211 238);
+  border-bottom: solid 10px rgb(127 211 238);
+  padding: 1em;
+  margin-right: -1px;
+  margin-left: -2px;
 }
