--- a/app/templates/profiles.html
+++ b/app/templates/profiles.html
@@ -47,7 +47,7 @@
     <p> Music: Nightcore</p>
     <p>Dream: To defeat the sussy little dragon of Cthulhu</p>
     <p>Job:Discord Admin</p>
-    
+
     {% elif name == "Dylan Goad"%}
     <p> {{name}} </p>
     <p>Bio: I liek turtles </p>
@@ -58,13 +58,22 @@
 
 
     {% elif name == "Dylan Shifton" or name == "Asian Markiplier"%}
-    <p> {{name}} </p>
-    <p>Bio: Am Wasian. Am Weeb. Am Saucy Housewife.</p>
-    <p>Dream: To become best Wasian.</p>
-    <p> Music: Everything except for rap.</p>
-    <p> Born Location: Hidden Leaf Village</p>
-    <p>Location: The Crib</p>
-    <p>Job: Pizza Boi <p>
+
+    <h1> {{name}} </h1>
+    <div>
+      <h2> Bio: </h2>
+      <p> Am Wasian. Am Weeb. Am Saucy Housewife.</p>
+      <h2>Dream:</h2>
+      <p>To become best Wasian.</p>
+      <h2> Music:</h2>
+      <p> Everything except for rap.</p>
+      <h2>Born Location:</h2>
+      <p> Hidden Leaf Village</p>
+      <h2>Location:</h2>
+      <p> The Crib</p>
+      <h2> Job:</h2>
+      <p> Pizza Boi <p>
+    </div>
 
 
     
