--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,30 +1,32 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href = "{% static 'styles.css'%}">
-        <title>Home</title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'styles.css'%}">
+  </head>
     <body>
         <h1>Welcome to BCCAbook!</h1>
-        <form  action="{% url 'hpnew' %}" method=GET >
+        <form action="{% url 'hpnew'%}" method="GET">
             <label>
-                <p>Name:</p>
-                <input type="text" name="name"></input>
+                <h1>Name:</h1>
+                <input type="text" name="name">
             </label>
 
             <button>Search</button>
         </form>
-        <main>
-        <p> {{new_name}} </p>
-        <p> {{bio}}</p>
-        <p> {{genre}} </p>
-        <p> {{dream}} </p>
-        <p> {{job}} </p>
-        <p> {{hometown}} </p>
-        </main>
+        {% for the_name, info in students.items %}
+            {% if the_name == name %}
+                <p> {{info.u_name}} </p>
+                <p> {{info.bio}}</p>
+                <p> {{info.fav_genre}} </p>
+                <p> {{info.dream}} </p>
+                <p> {{info.job}} </p>
+                <p> {{info.hometown}} </p>
+            {% endif %}
+        {% endfor %}
+        
     </body>
-</html
+</html>
