--- a/app/templates/profiles.html
+++ b/app/templates/profiles.html
@@ -21,40 +21,65 @@
       </form>
     </nav>
     {% if name == "Jacen Barefoot" %}
-    <p> {{name}} </p>
-    <p>Bio: I like to play Pokemon GO! Ayo</p>
-    <p>Location: Pontotoc City, MS</p>
-    <p>Dream: TO win a shiny Pokemon</p>
-    <p>Job: HomeTown Pizza<p>
+    
+      <p> {{name}} </p>
+    <nav>
+      <h2>Bio: </h2>
+      <p>I like to play Pokemon GO! Ayo</p>
+      <h2>Location:</h2>
+      <p>Pontotoc City, MS</p>
+      <h2>Dream:</h2>
+      <p>TO win a shiny Pokemon</p>
+      <h2>Job:</h2>
+      <p>HomeTown Pizza<p>
+    </nav>
 
     {% elif name == "Ethan Ward" or name == "Ethan"%}
-    <p> <p> {{name}} </p>
-    <p>Bio: I'm 18 years old. I'm Taken. Favorite Color is Purple</p>
-    <p> Music: Grunge</p>
-    <p>Location: Bruce, MS</p>
-    <p>Dream: To land a job in Cspire and grow my music</p>
-    <p>Job: Dishwasher at Corner Store<p> </p>
-
+    <nav>
+      <p> {{name}} </p>
+      <h2>Bio: </h2>
+      <p>I'm 18 years old. I'm Taken. Favorite Color is Purple</p>
+      <h2> Music: </h2>
+      <p>Grunge</p>
+      <h2>Location: </h2>
+      <p> Bruce, MS</p>
+      <h2>Dream: </h2>
+      <p>To land a job in Cspire and grow my music</p>
+      <h2>Job: </h2>
+      <p>Dishwasher at Corner Store</p> 
+    </nav>
 
     {% elif name == "Quinton Summerford"%}
-     <p> {{name}} </p>
-    <p>Bio: Blue Pill or Red Pill?
+    <nav>
+      <p> {{name}} </p>
+      <h2> Bio:</h2>
+      <p> Blue Pill or Red Pill?
 
-    Blue: Blueberry flavor
+      Blue: Blueberry flavor
 
-    Red: Infinite Money</p>
-    <p>Location: White Plains, NY</p>
-    <p> Music: Nightcore</p>
-    <p>Dream: To defeat the sussy little dragon of Cthulhu</p>
-    <p>Job:Discord Admin</p>
+      Red: Infinite Money</p>
+      <h2> Location:</h2>
+      <p>White Plains, NY</p>
+      <h2> Music</h2>
+      <p> Nightcore</p>
+      <h2> Dream:</h2>
+      <p>To defeat the sussy little dragon of Cthulhu</p>
+      <h2>Job: </h2>
+      <p>Discord Admin</p>
+    </nav>
 
     {% elif name == "Dylan Goad"%}
     <p> {{name}} </p>
-    <p>Bio: I liek turtles </p>
-    <p> Music Genre: Minecraft Parodies</p>
-    <p>Location: Charleston, Mississippi</p>
-    <p>Dream: Work for NASA </p>
-    <p>Job: Unemployed<p>
+    <h2> Bio:</h2>
+    <p> I like turtles </p>
+    <h2>Music: </h2>
+    <p> Minecraft Parodies</p>
+    <h2> Location:</h2>
+    <p> Charleston, Mississippi</p>
+    <h2> Dream:</h2>
+    <p> Work for NASA </p>
+    <h2> Job:</h2>
+    <p> Unemployed<p>
 
 
     {% elif name == "Dylan Shifton" or name == "Asian Markiplier"%}
@@ -79,53 +104,99 @@
     
 
     {% elif name == "Mariann Mccord" or name == "Mariann"%}
-    <p>{{name}}</p>
-    <p>Bio: I am 18 years old and I enjoy listening to music in my free time along with reading, watching TV, and sleeping. </p>
-    <p>Dream: I hope to be a Software engineer with at least a Master's degree in the future and possibly try my in music production. I also want to travel the world in the meantime.</p>
-    <p> Music: R&B/ Lofi HipHop</p>
-    <p>Born Location: I am from the small town of Charleston, Mississippi.</p>
-    <p>Location: Oxford</p>
-    <p>Job: I currently work at the Newk's on University Ave in Oxford,MS. <p>
+    <nav>
+      <p>{{name}}</p>
+      <h2> Bio:</h2>
+      <p>I am 18 years old and I enjoy listening to music in my free time along with reading, watching TV, and sleeping. </p>
+      <h2>Dream: </h2>
+      <p> I hope to be a Software engineer with at least a Master's degree in the future and possibly try my in music production. I also want to travel the world in the meantime.</p>
+      <h2>Music: </h2>
+      <p> R&B/ Lofi HipHop</p>
+      <h2> Born Location:</h2>
+      <p> I am from the small town of Charleston, Mississippi.</p>
+      <h2> Location: </h2>
+      <p> Oxford</p>
+      <h2> Job:</h2>
+      <p> I currently work at the Newk's on University Ave in Oxford,MS. <p>
+    </nav>
 
 
     {% elif name == "Will Collins"%}
-     <p> {{name}} </p>
-    <p>Bio: I eat chocolate</p>
-    <p>Location: Bruce, MS</p>
-    <p>Dream:10 kids</p>
-    <p>Job: Dadd's money<p>
+    <nav>
+      <p> {{name}} </p>
+      <h2>Bio: </h2>
+      <p> I eat chocolate</p>
+      <h2> Location:</h2>
+      <p>Bruce, MS</p>
+      <h2>Dream: </h2>
+      <p>10 kids</p>
+      <h2>Job: </h2>
+      <p>Dadd's money<p>
+    </nav>
 
 
     {% elif name == "Logan Coley"%}
-     <p> {{name}} </p>
-    <p>Bio: I like to play Pokemon GO!</p>
-    <p>Location: South Pontotoc</p>
-    <p>Dream: To own a game development company</p>
-    <p>Job: Mommy's store<p>
+    <nav>
+      <p> {{name}} </p>
+      <h2> Bio:</h2>
+      <p> I like to play Pokemon GO!</p>
+      <h2> Location:</h2>
+      <p>South Pontotoc</p>
+      <h2> Dream:</h2>
+      <p> To own a game development company</p>
+      <h2> Job:</h2>
+      <p> Mommy's store<p>
+    </nav>
+
     {% elif name == "Logan Wilkans"%}
-    <p> {{name}} </p>
-    <p>Bio: I love video games and play a large variety of them my favorites being soul calibur, halo, for honor, skyrim and fallout 4. I enjoy various forms of art as any for of expressing creativity brings me joy, I like to draw, create ships in space engineers, build models in blender, paint, write, make characters in video games, build maps in halo, etc. I also love to spar, as in sword fighting or other weapons fighting and i have practiced many martial arts to improve my sword fighting capability. Some of the martial arts i have studied involve </p>
-    <p>Dream: All my life i've wanted a role in creating video game, and it aligns with many of my favorite things to do, how ever I have to one day open a HEMA academy to teach sword play and martial arts</p>
-    <p> Favorite Music:Alternative rock is my top favorite, then there's instrumental, and dubstep... I also like christian rock</p>
-    <p>Location: Memphis</p>
-    <p>Job:  I currently work at Larsons Cashsaver Water Valley MS<p>
+    <nav>
+      <p> {{name}} </p>
+      <h2> Bio:</h2>
+      <p> I love video games and play a large variety of them my favorites being soul calibur, halo, for honor, skyrim and fallout 4. I enjoy various forms of art as any for of expressing creativity brings me joy, I like to draw, create ships in space engineers, build models in blender, paint, write, make characters in video games, build maps in halo, etc. I also love to spar, as in sword fighting or other weapons fighting and i have practiced many martial arts to improve my sword fighting capability. Some of the martial arts i have studied involve </p>
+      <h2> Dream:</h2>
+      <p>All my life i've wanted a role in creating video game, and it aligns with many of my favorite things to do, how ever I have to one day open a HEMA academy to teach sword play and martial arts</p>
+      <h2> Favorite Music:</h2>
+      <p>Alternative rock is my top favorite, then there's instrumental, and dubstep... I also like christian rock</p>
+      <h2> Location:</h2>
+      <p> Memphis</p>
+      <h2>Job: </h2>
+      <p>  I currently work at Larsons Cashsaver Water Valley MS<p>
+      </nav>
 
 
     {% elif name == "Isaac Jones"%}
-     <p>Bio: I like to make things. I have a lot of creative hobbies. Drawing, Jewelry making, sewing, and playing instruments.</p>
-    <p>Dream: I want to be pursue a career in art</p>
-    <p>Music: Rock, Electronic</p>
-    <p>Born Location: Oxford </p>
-    <p>Location: Oxford </p>
-    <p>Job: Server at Newk's Eatery <p>
+    <nav>
+      <p> {{name}}</p>
+      <h2>Bio: </h2>
+      <p> I like to make things. I have a lot of creative hobbies. Drawing, Jewelry making, sewing, and playing instruments.</p>
+      <h2> Dream:</h2>
+      <p> I want to be pursue a career in art</p>
+      <h2>Music:</h2>
+      <p> Rock, Electronic</p>
+      <h2>Born Location: </h2>
+      <p> Oxford </p>
+      <h2>Location: </h2>
+      <p> Oxford </p>
+      <h2>Job:</h2>
+      <p>Server at Newk's Eatery <p>
+    </nav>
+
     {% elif name == "Ryan Bennett"%}
-    <p> {{name}} </p>
-    <p>Bio: I'm a boring guy who plays video games.</p>
-    <p>Music: Classic Country</p>
-    <p>Dream: Become a video game developer</p>
-    <p>Born Saltillo, Mississippi</p>
-    <p>Location: Saltillo, Mississippi</p>
-    <p>Job: Server/Delivery Driver<p>
+    <nav>
+      <p> {{name}} </p>
+      <h2>Bio: </h2>
+      <p> I'm a boring guy who plays video games.</p>
+      <h2> Music:</h2>
+      <p>Classic Country</p>
+      <h2>Dream: </h2>
+      <p> Become a video game developer</p>
+      <h2> Born Location:</h2>
+      <p>Saltillo, Mississippi</p>
+      <h2> Location:</h2>
+      <p> Saltillo, Mississippi</p>
+      <h2>Job: </h2>
+      <p> Server/Delivery Driver<p>
+    </nav>
     
     {% elif name == "Randy Trullet"%}
     <p> {{name}}</p>
@@ -182,7 +253,7 @@
     <p>Job: Server at HomeTown Pizza <p>
 
     {% else %}
-    <p> Person does not attend BCCA or Does not currently have a permit</p>
+    <p> Person does not attend BCCA or Does not currently have a profile</p>
 
     
     {% endif %}
