--- a/app/templates/profiles.html
+++ b/app/templates/profiles.html
@@ -104,6 +104,7 @@
     <p>Job: Mommy's store<p>
     {% elif name == "Logan Wilkans"%}
     <p> {{name}} </p>
+    {% load static %} <img src="{% static "/images/loganw.jpg" %}" alt="home" />
     <p>Bio: I love video games and play a large variety of them my favorites being soul calibur, halo, for honor, skyrim and fallout 4. I enjoy various forms of art as any for of expressing creativity brings me joy, I like to draw, create ships in space engineers, build models in blender, paint, write, make characters in video games, build maps in halo, etc. I also love to spar, as in sword fighting or other weapons fighting and i have practiced many martial arts to improve my sword fighting capability. Some of the martial arts i have studied involve </p>
     <p>Dream: All my life i've wanted a role in creating video game, and it aligns with many of my favorite things to do, how ever I have to one day open a HEMA academy to teach sword play and martial arts</p>
     <p> Favorite Music:Alternative rock is my top favorite, then there's instrumental, and dubstep... I also like christian rock</p>
