--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -1,17 +1,23 @@
-{% extends 'home.html' %}
-{% block content %}
-{% for name, info in students %}
-    {% if name == u_name %}
-        <h1>{{name.info}}</h1>
-    {% endif %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{% static 'styles.css'%}">
+  </head>
+    <body>
+      {% for student, info in students.items %}
+        {% if student == name %}
+        <h1>{{info.u_name}}</h1>
+
+        <h2>Bio:</h2>
+        <h3>{{info.bio}}</h3>
+
+        <h2>
+        {% endif %}
+      {% endfor %}
 
 
-
-{% endfor %}
-
-
-
-
-
-
-{% endblock content %}
+    </body
