--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -9,16 +9,12 @@
   </head>
     <body>
         <h1>Welcome to BCCAbook!</h1>
-        <form action="{% url 'hpnew' %}" method="GET">
-            <label>
-                <h1>Name:</h1>
-                <input type="text" name="name">
-            </label>
-
-            <button>Search</button>
-        </form>
-
-       <p>{{name}}</p>
-
+        <div>
+            <ul>
+                {%for student in students%}
+                <li><a href="/homepage/{{student}}/">{{student}}</li>
+                {% endfor %}
+            </ul>
+        </div>
     </body>
 </html>
