--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -15,9 +15,17 @@
         <h2>Bio:</h2>
         <h3>{{info.bio}}</h3>
 
-        <h2>
+        <h2>Dream:</h2>
+        <h3>{{info.dream}}</h3>
+
+        <h2>Favorite Music Taste</h2>
+        <h3>{{info.fav_genre}}</h3>
+
+        <h2>Job:</h2>
+        <h3>{{info.job}}</h3>
+
+        <h2>HomeTown</h2>
+        <h3>{{info.hometown}}</h3>
         {% endif %}
       {% endfor %}
-
-
     </body
