--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -13,20 +13,37 @@ body {
   text-align: center;
 }
 
-p {
-  text-align: center;
-  font-size: 20px;
+li  {
+  padding-left: 2.2em;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  list-style-type: none;
+
 }
 
 div {
   border: solid 5px white;
   border-right: solid 10px rgb(127 211 238);
   border-bottom: solid 10px rgb(127 211 238);
-  padding: 1em;
-  margin-right: -1px;
-  margin-left: -2px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 10em;
+  width: 88em;
 }
 
+.homelink {
+    margin-left: auto;
+    margin-right: auto;
+}
 
+h1 {
+  text-align: center;
+}
 
 
