--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -28,4 +28,6 @@
         <h3>{{info.hometown}}</h3>
         {% endif %}
       {% endfor %}
+
+      <a class="homelink" href="{% url 'hpnew' %}">Home</a>
     </body
